--- a/src/astrology.html
+++ b/src/astrology.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="опис" content="Астрологічна сумісність в стосунках" />
     <title>Астрологічна сумісність</title>
-    <link rel="stylesheet" href="../../css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <load ="pages/astrology/partials/header-page.html" />
@@ -15,8 +15,8 @@
       <load ="pages/astrology/partials/reviews.html" />
     </main>
     <load ="pages/main/partials/footer.html" />
-    <script type="module" src="../../js/reviews-swiper.js"></script>
-    <script type="module" src="../../js/timer.js"></script>
+    <script type="module" src="./js/reviews-swiper.js"></script>
+    <script type="module" src="./js/timer.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       AOS.init();
