--- a/src/astrology.html
+++ b/src/astrology.html
@@ -13,6 +13,7 @@
     <main>
       <load ="pages/astrology/partials/leave_application.html" />
       <load ="pages/astrology/partials/reviews.html" />
+      <load ="pages/astrology/partials/pay-btn.html" />
     </main>
     <load ="pages/main/partials/footer.html" />
     <script type="module" src="./js/reviews-swiper.js"></script>
