--- a/src/astrology.html
+++ b/src/astrology.html
@@ -11,14 +11,13 @@
   <body>
     <load ="pages/astrology/partials/header-page.html" />
     <main>
-      <div class="bg-astrology">
+      <!-- <div class="bg-astrology"> -->
 
-  
       <load ="pages/astrology/partials/leave_application.html" />
       <load ="pages/astrology/partials/reviews.html" />
       <load ="pages/astrology/partials/pay-btn.html" />
 
-          </div>
+      <!-- </div> -->
     </main>
     <load ="pages/main/partials/footer.html" />
     <script type="module" src="./js/reviews-swiper.js"></script>
