--- a/src/astrology.html
+++ b/src/astrology.html
@@ -14,6 +14,7 @@
       <!-- <div class="bg-astrology"> -->
 
       <load ="pages/astrology/partials/leave_application.html" />
+      <load ="pages/astrology/partials/materials.html" />
       <load ="pages/astrology/partials/reviews.html" />
       <load ="pages/astrology/partials/pay-btn.html" />
 
