add sections answers

--- a/src/astrology.html
+++ b/src/astrology.html
@@ -15,6 +15,7 @@
 
       <load ="pages/astrology/partials/leave_application.html" />
       <load ="pages/astrology/partials/materials.html" />
+      <load ="pages/astrology/partials/answers.html" />
       <load ="pages/astrology/partials/reviews.html" />
       <load ="pages/astrology/partials/pay-btn.html" />
 
